--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "react-devtools": "react-devtools"
   },
   "dependencies": {
-    "@tonybadguy/call-me-maybe": "^2.0.1",
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.1",
@@ -17,9 +16,7 @@
     "react-native-swipe-cards": "^0.1.0",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
-    "redux": "^3.7.2",
-    "v3-yelp-api": "^1.0.2",
-    "yelp-fusion": "^1.0.3"
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "21.0.0",
